--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ avatar: https://avatars3.githubusercontent.com/u/18492388?v=4&u=39f6b5ba35c077eb
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: piman9@icloud.com
+  facebook: /neo.scott.90
   flickr:
-  github: barryclark/jekyll-now
+  github: /RoboNeo9
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
