--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: MathJax Testing ;)
+name: My math and other stuff blog without a name
 
 # Short bio or description (displayed in the header)
 description: by Neo Scott
@@ -19,9 +19,9 @@ avatar: https://avatars3.githubusercontent.com/u/18492388?v=4&u=39f6b5ba35c077eb
 footer-links:
   dribbble:
   email: piman9@icloud.com
-  facebook: /neo.scott.90
+  facebook: neo.scott.90
   flickr:
-  github: /RoboNeo9
+  github: RoboNeo9
   instagram:
   linkedin:
   pinterest:
