--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: My math blog without $a^{name}$
+name: My $mAtH$ blog without $a^{name}$
 
 # Short bio or description (displayed in the header)
 description: by Neo Scott
